force-app/main/default/objects/HAM_Group__c/HAM_Group__c.object-meta.xml
<CustomObject>
    <description>Serves as the primary object for capturing and tracking comprehensive group information.</description>
    <label>HAM Group</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HAM Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>