force-app/main/default/objects/HAM_Group__c/fields/Active_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Member_Count__c</fullName>
    <label>Active Member Count</label>
    <summaryFilterItems>
        <field>HAM_Group_Member__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>HAM_Group_Member__c.Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>