force-app/main/default/objects/HAM_Group__c/fields/Banner_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Banner_Image_URL__c</fullName>
    <description>External URL or Static Resource link for the header image.</description>
    <label>Banner Image URL</label>
    <type>Url</type>
</CustomField>