force-app/main/default/objects/HAM_Group__c/fields/Community_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Community_Guidelines__c</fullName>
    <description>Rendered in the dashboard info widget.</description>
    <label>Community Guidelines</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>