force-app/main/default/objects/HAM_Group__c/fields/What_We_Offer__c.field-meta.xml
<CustomField>
    <fullName>What_We_Offer__c</fullName>
    <description>Rendered in the dashboard info widget</description>
    <label>What We Offer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>